Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,22 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "range(0, 4)"
+       "[0, 1, 2, 3]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "listrange(0,4)"
+    "list(range(0,4))"
    ]
   },
   {
