Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,22 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3]"
+       "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(0,4))"
+    "list(range(0,4+1))"
    ]
   },
   {
