--- a/index.ipynb
+++ b/index.ipynb
@@ -81,22 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3, 4]"
+       "[0, 1, 2, 3]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(0,4+1))"
+    "list(range(0,4))"
    ]
   },
   {
